--- a/tickets-app/src/main/webapp/index.html
+++ b/tickets-app/src/main/webapp/index.html
@@ -4,8 +4,8 @@
     <base href="./" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ticketsapp</title>
-    <meta name="description" content="Description for ticketsapp">
+    <title>tickets</title>
+    <meta name="description" content="Description for tickets">
     <meta name="google" value="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
