--- a/tickets-app/src/main/webapp/swagger-ui/index.html
+++ b/tickets-app/src/main/webapp/swagger-ui/index.html
@@ -10,6 +10,11 @@
     <link href='./dist/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
     <link href='./dist/css/reset.css' media='print' rel='stylesheet' type='text/css'/>
     <link href='./dist/css/print.css' media='print' rel='stylesheet' type='text/css'/>
+
+    <link href='./node_modules/owl.carousel/dist/assets/owl.carousel.css'/>
+    <link href='./node_modules/owl.carousel/dist/assets/owl.theme.default.css/'>
+
+
     <script src='./dist/lib/object-assign-pollyfill.js' type='text/javascript'></script>
     <script src='./dist/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
     <script src='./dist/lib/jquery.slideto.min.js' type='text/javascript'></script>
@@ -23,6 +28,8 @@
     <script src='./dist/lib/jsoneditor.min.js' type='text/javascript'></script>
     <script src='./dist/lib/marked.js' type='text/javascript'></script>
     <script src='./dist/lib/swagger-oauth.js' type='text/javascript'></script>
+
+    <script src='./dist/lib/owl.carousel.js' type='text/javascript'></script>
 
     <!-- Some basic translations -->
     <!-- <script src='lang/translator.js' type='text/javascript'></script> -->
